--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        rel="icon"
+        type="image/png"
+        sizes="32x32"
+        href="./images/favicon-32x32.png"
+    />
     <title>QR code component</title>
 </head>
 <body>
     <main class="card">
-    <img class="qrcode" src="images/image-qr-code.png" alt="qr_code">
-    <h2>Improve your front-end skills by building projects</h2>
-    <p>Scan the QR code to visit Frontend Mentor and take yout coding skills to the next level</p>
+        <img class="qrcode" src="images/image-qr-code.png" alt="qr_code">
+        <h2 class="headline">Improve your front-end skills by building projects</h2>
+        <p class="copy">Scan the QR code to visit Frontend Mentor and take yout coding skills to the next level</p>
     </main>
 
 </body>
